2006-10-03  Roland Dreier  <rdreier@cisco.com>

	* src/cmd.c (ibv_cmd_get_context_v2, ibv_cmd_get_context)
	(ibv_cmd_query_device, ibv_cmd_query_port, ibv_cmd_alloc_pd)
	(ibv_cmd_reg_mr, ibv_cmd_create_cq_v2, ibv_cmd_create_cq)
	(ibv_cmd_poll_cq, ibv_cmd_resize_cq, ibv_cmd_destroy_cq)
	(ibv_cmd_create_srq, ibv_cmd_create_qp, ibv_cmd_post_send)
	(ibv_cmd_post_recv, ibv_cmd_post_srq_recv, ibv_cmd_create_ah)
	(ibv_cmd_destroy_qp): Annotate so that Valgrind knows responses
	are defined after write() succeeds.  The kernel writes into the
	response structure directly, so without these, Valgrind thinks
	that response structures are undefined memory.  This is based on
	patches and suggestions by Rainer Keller <keller@hlrs.de>, Jeff
	Squyres <jsquyres@cisco.com> and Siqing Fan.

	* src/ibverbs.h: Add wrapper for VALGRIND_MAKE_MEM_DEFINED so that
	it can be used in .c files without worrying about whether Valgrind
	is installed or enabled.

	* configure.in: Add support for Valgrind annotation (enabled with
	--with-valgrind option to configure).

	* src/cmd.c (ibv_cmd_query_port, ibv_cmd_create_cq,
	ibv_cmd_modify_qp): Set reserved fields to 0 to avoid future
	problems and also to make Valgrind a little quieter.

	* src/init.c (init_drivers): Set node_type and transport_type
	values of device being created.

	* include/infiniband/verbs.h: Add ibv_node_type enum value
	IBV_NODE_RNIC, and add enum ibv_transport_type.  Add node_type and
	transport_type fields to struct ibv_device.

2006-09-12  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Swap wr_id and next members of
	struct ibv_send_wr and struct ibv_recv_wr.  This allows wr_id to
	be naturally aligned without padding on 32-bit platforms.

2006-08-23  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/driver.h: Add a definition of the macro
	IBV_CMD_RESIZE_CQ_HAS_RESP_PARAMS so that low-level driver plugins
	can detect the changed signature of ibv_cmd_resize_cq().
